<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DietBookbyMEE</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>      
    <string name="button1">Sign In</string>
    <string name="button_main">Log In</string>
    <string name="button_input_table">To My Diet Table</string>
    <string name="reg_button">Register</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="continue_to_table">Continue To Table</string>
    <string name="mobile">Mobile</string>
    <string name="personal_details">Personal Data Page</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="coutry">Country</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kilo">Kilogram</string>
    <string name="table_button">My daily Diet Book</string>
    <string name="description">My daily Diet Book - Application helping people maintain a healthier life</string>
    <string name="reset_pass">Reset Password</string>
    

</resources>