<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ExpandableListView
        android:id="@+id/expandableListView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lastnameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/mailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/email"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/mobileView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <ExpandableListView
        android:id="@+id/expandableListView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCityView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/adressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/streetView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street" />

    <EditText
        android:id="@+id/street"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/countryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coutry" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteCountryView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/zipView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <EditText
        android:id="@+id/re_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/continueTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_to_table" />

</LinearLayout>